--- a/client-app/app/page.module.css
+++ b/client-app/app/page.module.css
@@ -12,17 +12,21 @@
   width: 48px;
   border: 2px white solid;
   border-radius: 2px;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: xx-large;
+  font-weight: 500;
  }
 
- .input {
+ /* .input {
   all: unset;
   width: 100%;
   height: 100%;
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
   font-size: xx-large;
-  font-weight: 500;
- }
+  font-weight: bold;
+ } */
 
 .description {
   display: inherit;
